--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -49,8 +49,6 @@
     width: 30rem;
   }
   .hero-right{
-    flex:1;
-    display: flex;
-    align-items:center;
-    justify-content: center;
+    padding-top: 30px;
+    padding-right: 60px;
   }
